--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,12 +1,18 @@
-CC ?= gcc-12  # По умолчанию компилятор
+#CC ?= gcc-12  # По умолчанию компилятор
 
-obj-m += ipc_driver.o
+# итоговый модуль
+obj-m += dripc.o
+
+# объектные файлы для сборки модуля
+dripc-y := id.o connection.o client.o server.o shm.o main.o
+
+# Добавляем каталог include
+#EXTRA_CFLAGS += -I$(CURDIR)/../include
+ccflags-y += -I$(PWD)/include
+#ccflags-y += -I$(CURDIR)/.../include
 
 # Путь к ядру
 KERNELDIR ?= /lib/modules/$(shell uname -r)/build
-
-# Добавляем каталог include
-ccflags-y += -I$(CURDIR)/../include
 
 default: help
 
@@ -14,22 +20,23 @@ default: help
 b:
 	@echo ""
 	@echo "== BUILDING DRIVER =="
-	$(MAKE) -C $(KERNELDIR) M=$(CURDIR) CC=$(CC) modules
+	@echo "Компиляция с флагами: $(ccflags-y)"
+	$(MAKE) -C $(KERNELDIR) M=$(CURDIR) modules
 
 # очистка верменных файлов
 c:
 	@echo ""
 	@echo "== CLEANING DRIVER =="
-	$(MAKE) -C $(KERNELDIR) M=$(CURDIR) CC=$(CC) clean
+	$(MAKE) -C $(KERNELDIR) M=$(CURDIR) clean
 	rm -rf *.ko *.o *.mod.c .*.cmd .tmp_versions Module.symvers modules.order
 
 # установка модуля ядра
 i:
-	sudo insmod ipc_driver.ko
+	sudo insmod dripc.ko
 
 # извлечение модуля ядра
 r:
-	sudo rmmod ipc_driver
+	sudo rmmod dripc
 
 # персборка
 cb: c b
