memory mapping is now available for clients and servers: - Added id limits (16 bits maximum per id) - The ID generator for servers, clients, shared memories is the same - The test file has been changed: new functions for mapping, reading and writing to memory have been added

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -8,7 +8,8 @@ dripc-y := id.o connection.o client.o server.o shm.o main.o
 
 # Добавляем каталог include
 #EXTRA_CFLAGS += -I$(CURDIR)/../include
-ccflags-y += -I$(PWD)/include
+ccflags-y += -I$(PWD)/include 
+ccflags-y += -I$(PWD)/driver 
 #ccflags-y += -I$(CURDIR)/.../include
 
 # Путь к ядру
