signals:   Added a separate thread for signal processing. I use real-time signals 40, 41

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -4,7 +4,7 @@
 obj-m += dripc.o
 
 # объектные файлы для сборки модуля
-dripc-y := id.o connection.o client.o server.o shm.o main.o
+dripc-y := id.o connection.o client.o server.o shm.o main.o sigs.o
 
 # Добавляем каталог include
 #EXTRA_CFLAGS += -I$(CURDIR)/../include
