update driver: - Added notifications  for notification of disconnection of one of the communication duo (client or server). - Fixed memory leak: when a notification was created but not attached to the process, it needs to be deleted.
update library:
- Added ability to disconnect from connection (for server and client)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,9 @@ add_subdirectory(driver)
 # Затем user-space библиотека
 add_subdirectory(libripc)
 # Затем тестовое приложение
-add_subdirectory(test_app)
+#add_subdirectory(test_app)
 add_subdirectory(test_app2)
+add_subdirectory(test_app3)
 
 # --- Пользовательские цели верхнего уровня (для удобства) ---
 # Они будут работать, так как цели из подкаталогов видны на верхнем уровне
