Added tests and fixed bugs: - Added tests for integration and functional testing driver and libripc (these tests are more designed to test the functionality of the driver through the public api from libripc); - fixed a bug with the inability to automatically destroy RipcEntityManager; - Added public disconnec(id) metod to server class to disconnect from client; - Changed delimeters in BufderView class; - FIxed server's name checking; - Fixed  find() methods in Memory class.

--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -17,7 +17,7 @@ foreach(TEST_SOURCE_FILE ${TEST_SOURCES})
     
     # Линкуем тест с вашей библиотекой libripc
     # Это также добавит необходимые include пути от libripc
-    target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest ripc)
+    target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main ripc)
     
     # Опционально: если тестам нужны специфичные флаги или библиотеки
     # target_compile_options(${TEST_NAME} PRIVATE -Wall -Wextra -g)
