added restful client with get and post methods

--- a/examples/2/CMakeLists.txt
+++ b/examples/2/CMakeLists.txt
@@ -1,15 +1,20 @@
-# CMake-файл для тестового приложения test_app
-set(NAME test_app2)
+# CMake-файл для тестового приложения 
+set(CLIENT client)
+set(SERVER server)
 
 # Определяем исполняемый файл и его исходник
-add_executable(${NAME} app.cpp)
+add_executable(${CLIENT} client.cpp)
+add_executable(${SERVER} server.cpp)
 
 # Линкуем тестовое приложение с нашей библиотекой libripc
-target_link_libraries(${NAME} PRIVATE ripc)
+target_link_libraries(${CLIENT} PRIVATE ripc)
+target_link_libraries(${SERVER} PRIVATE ripc)
 
 # Добавляем флаги компиляции для теста
-target_compile_options(${NAME} PRIVATE -Wall -Wextra -g -fsanitize=address -fno-omit-frame-pointer -march=native) # Например, отладка
-target_link_options(${NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer) 
+target_compile_options(${CLIENT} PRIVATE -Wall -Wextra -g -fsanitize=address -fno-omit-frame-pointer -march=native) # Например, отладка
+target_link_options(${CLIENT} PRIVATE -fsanitize=address -fno-omit-frame-pointer) 
+target_compile_options(${SERVER} PRIVATE -Wall -Wextra -g -fsanitize=address -fno-omit-frame-pointer -march=native) # Например, отладка
+target_link_options(${SERVER} PRIVATE -fsanitize=address -fno-omit-frame-pointer) 
 
 # --- Установка ---
 # include(GNUInstallDirs)
